--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
 <body>
     <div class="container">
         <div class="left">
-            <label class="html-code"><i class="fa-brands fa-html5"></i> HTML</label>
-            <textarea id="html" onkeyup="run()"></textarea>
+            <div class="code" id="html-transition">
+                <label class="html-code"><i class="fa-brands fa-html5"></i> HTML</label>
+                <textarea id="html" onkeyup="run()"></textarea>
+            </div>
+            
+            <div class="code" id="css-transition">
+                <label class="css-code"><i class="fa-brands fa-css3-alt"></i> CSS</label>
+                <textarea id="css" onkeyup="run()"></textarea>
+            </div>
 
-            <label class="css-code"><i class="fa-brands fa-css3-alt"></i> CSS</label>
-            <textarea id="css" onkeyup="run()"></textarea>
-
-            <label class="js-code"><i class="fa-brands fa-js"></i> JavaScript</label>
-            <textarea id="js" onkeyup="run()"></textarea>         
+            <div class="code" id="js-transition">
+                <label class="js-code"><i class="fa-brands fa-js"></i> JavaScript</label>
+                <textarea id="js" onkeyup="run()"></textarea>     
+            </div>
         </div>
-        <div class="right">
+        <div class="right" id="output-transition">
             <label class="output"><i class="fa-solid fa-play"></i> Output</label>
             <iframe id="output"></iframe>
         </div>
